# binaryninja-abstract-type

./: Cargo.toml
binaryninja-abstract-type-derive/: Cargo.toml
binaryninja-abstract-type-derive/src/: derive_impl.rs  lib.rs
src/: lib.rs
